Project/cis-aks-audit/k8s-manifests/03-busybox-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-bad
  namespace: staging
  labels:
    purpose: audit-test-remediated
    audit-compliance: "pass"
spec:
  hostPID: false
  hostIPC: false
  hostNetwork: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: busybox
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"
        limits:
          memory: "64Mi"
          cpu: "100m"
