Project/cis-aks-audit/k8s-manifests/04-secret-env-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-with-env-secret
  namespace: dev
  labels:
    audit-compliance: "pass"
    purpose: audit-test-remediated
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      # ĐÃ SỬA LỖI (4.5.1): Chuyển thành Volume Mount thay vì env variables
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
          readOnly: true
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"
        limits:
          memory: "64Mi"
          cpu: "100m"
  volumes:
    - name: secret-volume
      secret:
        secretName: db-credentials
