Project/cis-aks-audit/k8s-manifests/06-remediation-quotas-networkpolicies.yaml
# ============================================================================
# 06-remediation-quotas-networkpolicies.yaml
# Baseline controls for remediation:
#   4.4.2 - Ensure that all Namespaces have Network Policies defined
#   4.6.1 - Create administrative boundaries between resources using namespaces
# ============================================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
  labels:
    audit-test: "true"
    remediation: "true"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: staging
  labels:
    audit-test: "true"
    remediation: "true"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
